--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,50 @@
 *{
-    box-sizing: border-box;
-}
+    box-sizing: border-box; 
+    font-family: 'Oswald', sans-serif;
+} 
 
 body{
     margin: 0;
+}
+
+.topBar{
+    background-color: #4695EA;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+h1{
+    font-size: 72px;
+}
+
+.allContent{
+    width: 100%;
+    background-color: #003166;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.allContent > section{
+    background-color: #A5C5E8;
+    width: 60%;
+    padding: 2vh;
+}
+
+.deductionSpacer{
+    width: 90%;
+}
+
+
+
+
+
+
+
+footer{
+    background-color: #4695EA;
 }
